Tue Jan 10 19:26:58 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * tests/Portable_Interceptors/Collocated/Dynamic/Collocated_Test.cpp:
        * tests/Portable_Interceptors/Collocated/Dynamic/Server_Task.cpp:

        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/Collocated_Test.cpp:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/Server_Task.cpp:

				  On behalf of Tim Bradley (bradley_t@ociweb.com), applying these 
					changes to resolve the failure of the two tests.

Tue Jan 10 10:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2349_Regression/server.cpp:
          Added missign return

Mon Jan  9 23:33:10 UTC 2006  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>

        * orbsvcs/tests/Notify/lib/common.h:

          Correcting a build problem due to the wrong placement of an
          export modifier in the function's declaration.

Mon Jan  9 13:51:05 MST 2006  Scott Harris  <harris_s@ociweb.com>

        * orbsvcs/orbsvcs/IFRService/InterfaceAttrExtension_i.cpp:
        * orbsvcs/orbsvcs/IFRService/InterfaceDef_i.cpp:

          Fixed an Interface Repository inheritance bug.
          Thanks to Bryan Cassell <BryanCassell@iti-team.com> for identifying
          the problem.
          Thanks to Jeff Parsons <j.parsons@vanderbilt.edu> for reviewing
          the changes.

        * orbsvcs/tests/InterfaceRepo/IFR_Inheritance_Test/IFR_Inheritance_Test.mpc:
        * orbsvcs/tests/InterfaceRepo/IFR_Inheritance_Test/README:
        * orbsvcs/tests/InterfaceRepo/IFR_Inheritance_Test/main.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Inheritance_Test/run_test.pl:
        * orbsvcs/tests/InterfaceRepo/IFR_Inheritance_Test/IFR_Inheritance_Test.idl:

          An automated test of the bug.

Mon Jan  9 16:20:05 UTC 2006  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>

        * orbsvcs/tests/Notify/lib/common.cpp:

          Correcting a build problem due to an unnecessary export in the